{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 28,
  "lineage": "4c14f638-efb8-5e5b-b0a0-61689864791e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xorbits-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:internet-gateway/igw-06122e6d6ccfde85c",
            "id": "igw-06122e6d6ccfde85c",
            "owner_id": "932682266260",
            "tags": {
              "Name": "xorbits-vpc-igw"
            },
            "tags_all": {
              "Name": "xorbits-vpc-igw"
            },
            "vpc_id": "vpc-0a0690dc0854f3c80"
          },
          "dependencies": [
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xorbits-vpc-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:route-table/rtb-0afaf831f99b6896d",
            "id": "rtb-0afaf831f99b6896d",
            "owner_id": "932682266260",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06122e6d6ccfde85c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xorbits-vpc-public-rt"
            },
            "tags_all": {
              "Name": "xorbits-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0690dc0854f3c80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.xorbits-vpc-igw",
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd850f15eec44bc5",
            "route_table_id": "rtb-0afaf831f99b6896d",
            "subnet_id": "subnet-06ab37da57d007055"
          },
          "dependencies": [
            "aws_internet_gateway.xorbits-vpc-igw",
            "aws_route_table.xorbits-vpc-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xorbits-vpc-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:security-group/sg-03b064befd87cc31e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03b064befd87cc31e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "xorbits-vpc-ssh",
            "name_prefix": "",
            "owner_id": "932682266260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xorbits-vpc-ssh"
            },
            "tags_all": {
              "Name": "xorbits-vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0690dc0854f3c80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:subnet/subnet-0181701fa0be7190f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0181701fa0be7190f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932682266260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xorbits private subnet"
            },
            "tags_all": {
              "Name": "xorbits private subnet"
            },
            "vpc_id": "vpc-0a0690dc0854f3c80"
          },
          "dependencies": [
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:subnet/subnet-06ab37da57d007055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab37da57d007055",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "932682266260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xorbits public subnet"
            },
            "tags_all": {
              "Name": "xorbits public subnet"
            },
            "vpc_id": "vpc-0a0690dc0854f3c80"
          },
          "dependencies": [
            "aws_vpc.xorbits-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xorbits-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:932682266260:vpc/vpc-0a0690dc0854f3c80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e544e2224cc5749f",
            "default_route_table_id": "rtb-0410b7bc292810521",
            "default_security_group_id": "sg-01d48f861cad97b17",
            "dhcp_options_id": "dopt-0f0ec2f5c16c3048f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0690dc0854f3c80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0410b7bc292810521",
            "owner_id": "932682266260",
            "tags": {
              "Name": "xorbits-vpc"
            },
            "tags_all": {
              "Name": "xorbits-vpc"
            }
          }
        }
      ]
    }
  ]
}